--- a/tensor_basic.ipynb
+++ b/tensor_basic.ipynb
@@ -2,68 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "What is PyTorch?\n",
-    "================\n",
-    "\n",
-    "It’s a Python-based scientific computing package targeted at two sets of\n",
-    "audiences:\n",
-    "\n",
-    "-  A replacement for NumPy to use the power of GPUs\n",
-    "-  a deep learning research platform that provides maximum flexibility\n",
-    "   and speed\n",
-    "\n",
-    "Getting Started\n",
-    "---------------\n",
-    "\n",
-    "Tensors\n",
-    "^^^^^^^\n",
-    "\n",
-    "Tensors are similar to NumPy’s ndarrays, with the addition being that\n",
-    "Tensors can also be used on a GPU to accelerate computing.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
-    "import torch"
+    "import torch\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><h4>Note</h4><p>An uninitialized matrix is declared,\n",
-    "    but does not contain definite known\n",
-    "    values before it is used. When an\n",
-    "    uninitialized matrix is created,\n",
-    "    whatever values were in the allocated\n",
-    "    memory at the time will appear as the initial values.</p></div>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Construct a 5x3 matrix, uninitialized:\n",
-    "\n"
+    "# Create Tensor - ver1"
    ]
   },
   {
@@ -72,28 +23,27 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0., 0., 0.],\n",
-      "        [0., 0., 0.],\n",
-      "        [0., 0., 0.],\n",
-      "        [0., 0., 0.],\n",
-      "        [0., 0., 0.]])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.empty(5, 3)\n",
-    "print(x)"
+    "torch.tensor([[1, 2], [3, 4]])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct a randomly initialized matrix:\n",
-    "\n"
+    "### question\n",
+    "- You should transform numpy arrays to PyTorch tensors with torch.from_numpy. Otherwise some weird issues might occur. img = torch.from_numpy(img).float().to(device) "
    ]
   },
   {
@@ -102,28 +52,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.2020, 0.1137, 0.2579],\n",
-      "        [0.6782, 0.3264, 0.3812],\n",
-      "        [0.1950, 0.6008, 0.9642],\n",
-      "        [0.3005, 0.5999, 0.1205],\n",
-      "        [0.5044, 0.6685, 0.3466]])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4]], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.rand(5, 3)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Construct a matrix filled zeros and of dtype long:\n",
-    "\n"
+    "torch.tensor(np.array([[1, 2], [3, 4]]))"
    ]
   },
   {
@@ -132,29 +73,47 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0, 0, 0],\n",
-      "        [0, 0, 0],\n",
-      "        [0, 0, 0],\n",
-      "        [0, 0, 0],\n",
-      "        [0, 0, 0]])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4]], dtype=torch.int32)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.zeros(5, 3, dtype=torch.long)\n",
-    "print(x)\n",
-    "print(x.size())"
+    "torch.from_numpy(np.array([[1, 2], [3, 4]]))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct a tensor directly from data:\n",
-    "\n"
+    "# Change dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 2.],\n",
+       "        [3., 4.]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.tensor([[1, 2], [3, 4]], dtype=torch.float64)"
    ]
   },
   {
@@ -163,65 +122,36 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([5.5000, 3.0000])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[1., 2.],\n",
+       "        [3., 4.]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.tensor([5.5, 3])\n",
-    "print(x)\n",
-    "print(x.size())"
+    "torch.from_numpy(np.array([[1, 2], [3, 4]])).type(torch.float64)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or create a tensor based on an existing tensor. These methods\n",
-    "will reuse properties of the input tensor, e.g. dtype, unless\n",
-    "new values are provided by user\n",
-    "\n"
+    "# Change Device"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.],\n",
-      "        [1., 1., 1.]], dtype=torch.float64)\n",
-      "tensor([[ 1.2893,  0.7147, -0.7506],\n",
-      "        [ 0.0308,  0.5301, -2.0970],\n",
-      "        [-1.1352,  1.4345, -0.4988],\n",
-      "        [ 0.4638, -1.0098, -0.5096],\n",
-      "        [-1.8619, -0.4450, -0.0903]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = x.new_ones(5, 3, dtype=torch.double)      # new_* methods take in sizes (dtype?)\n",
-    "print(x)\n",
-    "\n",
-    "x = torch.randn_like(x, dtype=torch.float)    # override dtype!\n",
-    "print(x)                                      # result has the same size"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Get its size:\n",
-    "\n"
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device('cuda')"
    ]
   },
   {
@@ -230,30 +160,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([5, 3])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(x.size())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-info\"><h4>Note</h4><p>``torch.Size`` is in fact a tuple, so it supports all tuple operations.</p></div>\n",
-    "\n",
-    "Operations\n",
-    "^^^^^^^^^^\n",
-    "There are multiple syntaxes for operations. In the following\n",
-    "example, we will take a look at the addition operation.\n",
-    "\n",
-    "Addition: syntax 1\n",
-    "\n"
+    "torch.tensor([[1, 2], [3, 4]], device=device)"
    ]
   },
   {
@@ -262,28 +181,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 1.8075,  1.5977, -0.0888],\n",
-      "        [ 0.3012,  0.9429, -1.8853],\n",
-      "        [-1.0354,  2.1471,  0.4564],\n",
-      "        [ 0.9831, -0.5504, -0.4278],\n",
-      "        [-1.0161, -0.1267,  0.0333]])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[1, 2],\n",
+       "        [3, 4]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = torch.rand(5, 3)\n",
-    "print(x + y)"
+    "torch.tensor([[1, 2], [3, 4]]).to(device)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Addition: syntax 2\n",
-    "\n"
+    "# Create Tensor - ver2"
    ]
   },
   {
@@ -292,27 +209,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 1.8075,  1.5977, -0.0888],\n",
-      "        [ 0.3012,  0.9429, -1.8853],\n",
-      "        [-1.0354,  2.1471,  0.4564],\n",
-      "        [ 0.9831, -0.5504, -0.4278],\n",
-      "        [-1.0161, -0.1267,  0.0333]])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0.],\n",
+       "        [0., 0.]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(torch.add(x, y))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Addition: providing an output tensor as argument\n",
-    "\n"
+    "torch.zeros(2, 2)"
    ]
   },
   {
@@ -321,29 +230,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 1.8075,  1.5977, -0.0888],\n",
-      "        [ 0.3012,  0.9429, -1.8853],\n",
-      "        [-1.0354,  2.1471,  0.4564],\n",
-      "        [ 0.9831, -0.5504, -0.4278],\n",
-      "        [-1.0161, -0.1267,  0.0333]])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[1., 1.],\n",
+       "        [1., 1.]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = torch.empty(5, 3)\n",
-    "torch.add(x, y, out=result)\n",
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Addition: in-place\n",
-    "\n"
+    "torch.ones(2, 2)"
    ]
   },
   {
@@ -352,57 +251,36 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[ 1.8075,  1.5977, -0.0888],\n",
-      "        [ 0.3012,  0.9429, -1.8853],\n",
-      "        [-1.0354,  2.1471,  0.4564],\n",
-      "        [ 0.9831, -0.5504, -0.4278],\n",
-      "        [-1.0161, -0.1267,  0.0333]])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[2., 2.],\n",
+       "        [2., 2.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# adds x to y\n",
-    "y.add_(x)\n",
-    "print(y)"
+    "torch.full((2, 2), fill_value=2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-info\"><h4>Note</h4><p>Any operation that mutates a tensor in-place is post-fixed with an ``_``.\n",
-    "    For example: ``x.copy_(y)``, ``x.t_()``, will change ``x``.</p></div>\n",
-    "\n",
-    "You can use standard NumPy-like indexing with all bells and whistles!\n",
-    "\n"
+    "# Create Tensor - ver 3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([ 0.7147,  0.5301,  1.4345, -1.0098, -0.4450])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(x[:, 1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Resizing: If you want to resize/reshape tensor, you can use ``torch.view``:\n",
-    "\n"
+    "target = ((1, 2, 3), (4, 5, 6))\n",
+    "target_one = torch.tensor(target, dtype=torch.float64)"
    ]
   },
   {
@@ -411,73 +289,30 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([4, 4]) torch.Size([16]) torch.Size([2, 8])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0.],\n",
+       "        [0., 0.],\n",
+       "        [0., 0.],\n",
+       "        [0., 0.]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "x = torch.randn(4, 4)\n",
-    "y = x.view(16)\n",
-    "z = x.view(-1, 8)  # the size -1 is inferred from other dimensions\n",
-    "print(x.size(), y.size(), z.size())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you have a one element tensor, use ``.item()`` to get the value as a\n",
-    "Python number\n",
-    "\n"
+    "target_one.new_zeros(4, 2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([-1.0667])\n",
-      "-1.0666707754135132\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = torch.randn(1)\n",
-    "print(x)\n",
-    "print(x.item())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Read later:**\n",
-    "\n",
-    "\n",
-    "  100+ Tensor operations, including transposing, indexing, slicing,\n",
-    "  mathematical operations, linear algebra, random numbers, etc.,\n",
-    "  are described\n",
-    "  `here <https://pytorch.org/docs/torch>`_.\n",
-    "\n",
-    "NumPy Bridge\n",
-    "------------\n",
-    "\n",
-    "Converting a Torch Tensor to a NumPy array and vice versa is a breeze.\n",
-    "\n",
-    "The Torch Tensor and NumPy array will share their underlying memory\n",
-    "locations (if the Torch Tensor is on CPU), and changing one will change\n",
-    "the other.\n",
-    "\n",
-    "Converting a Torch Tensor to a NumPy Array\n",
-    "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-    "\n"
+    "target_two = torch.tensor(target, device=device)"
    ]
   },
   {
@@ -486,16 +321,28 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([1., 1., 1., 1., 1.])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[5, 5],\n",
+       "        [5, 5],\n",
+       "        [5, 5],\n",
+       "        [5, 5]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = torch.ones(5)\n",
-    "print(a)"
+    "target_two.new_full((4, 2), fill_value=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Tensor - ver4"
    ]
   },
   {
@@ -504,24 +351,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 1. 1. 1. 1.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[0., 0., 0.],\n",
+       "        [0., 0., 0.]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "b = a.numpy()\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "See how the numpy array changed in value.\n",
-    "\n"
+    "torch.zeros_like(target_one)"
    ]
   },
   {
@@ -530,28 +372,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([2., 2., 2., 2., 2.])\n",
-      "[2. 2. 2. 2. 2.]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[1, 1, 1],\n",
+       "        [1, 1, 1]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.add_(1)\n",
-    "print(a)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Converting NumPy Array to Torch Tensor\n",
-    "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-    "See how changing the np array changed the Torch Tensor automatically\n",
-    "\n"
+    "torch.ones_like(target_two)"
    ]
   },
   {
@@ -560,61 +393,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2. 2. 2. 2. 2.]\n",
-      "tensor([2., 2., 2., 2., 2.], dtype=torch.float64)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[3, 3, 3],\n",
+       "        [3, 3, 3]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "a = np.ones(5)\n",
-    "b = torch.from_numpy(a)\n",
-    "np.add(a, 1, out=a)\n",
-    "print(a)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "All the Tensors on the CPU except a CharTensor support converting to\n",
-    "NumPy and back.\n",
-    "\n",
-    "CUDA Tensors\n",
-    "------------\n",
-    "\n",
-    "Tensors can be moved onto any device using the ``.to`` method.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([-0.0667], device='cuda:0')\n",
-      "tensor([-0.0667], dtype=torch.float64)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# let us run this cell only if CUDA is available\n",
-    "# We will use ``torch.device`` objects to move tensors in and out of GPU\n",
-    "if torch.cuda.is_available():\n",
-    "    device = torch.device(\"cuda\")          # a CUDA device object\n",
-    "    y = torch.ones_like(x, device=device)  # directly create a tensor on GPU\n",
-    "    x = x.to(device)                       # or just use strings ``.to(\"cuda\")``\n",
-    "    z = x + y\n",
-    "    print(z)\n",
-    "    print(z.to(\"cpu\", torch.double))       # ``.to`` can also change dtype together!"
+    "torch.full_like(target_two, fill_value=3)"
    ]
   }
  ],
@@ -634,9 +425,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
