--- a/draft/tensor_basic.ipynb
+++ b/draft/tensor_basic.ipynb
@@ -150,8 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if torch.cuda.is_available():\n",
-    "    device = torch.device('cuda')"
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'
    ]
   },
   {
