--- a/draft/tensor_basic.ipynb
+++ b/draft/tensor_basic.ipynb
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
